--- a/bscs24087.html
+++ b/bscs24087.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My first webpage</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BSCS24087</title>
+    <link rel="stylesheet" href="bscs24087.css">
 </head>
-
 <body>
-    <Hello>
-</body>
 
+
+    <p class="info"><b>Name:</b> Nofil Ali Khan</p>
+    <p class="info"><b>Roll Number:</b> <i>BSCS24087</i></p>
+    <p class="info"><b>Subject:</b> <u>Applications of ICT</u></p>
+
+    
+    <hr>
+    <p>Click to go to Google:</p>
+    <a href="https://www.google.com" target="_self">
+        <img src="https://preview.redd.it/i-got-bored-so-i-decided-to-draw-a-random-image-on-the-v0-4ig97vv85vjb1.png?width=640&crop=smart&auto=webp&s=22ed6cc79cba3013b84967f32726d087e539b699" alt="Google Image" style="width:150px; height:150px;">
+    </a>
+    <br><hr>
+    <a href="https://www.gmail.com" target="_blank">Gmail</a>
+    <br><hr>
+
+  
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ol>
+    <ul style="list-style-type: square;">
+        <li>Frontend Development</li>
+        <li>Backend Development</li>
+        <li>Full-Stack Development</li>
+    </ul>
+
+    
+    <div class="first-div">
+        Hello, this is someone from this class who wants to talk to you.
+    </div>
+
+    <p class="normal-para">I like football.</p>
+    <p class="normal-para">I like Man city.</p>
+    <p class="normal-para">I like Messi.</p>
+    <p class="normal-para">I like Ronaldo.</p>
+    <p class="normal-para">I like Fifa.</p>
+
+    <p class="fav-para">I like cricket.</p>
+    <p class="fav-para">I don't like Pakistan.</p>
+    <p class="fav-para">I like Babar Azam .</p>
+    <p class="fav-para">I like The cricketer.</p>
+    <p class="fav-para">Cricket is boring.</p>
+</body>
 </html>
